--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,11 +2,15 @@
 
 
 
-<ul>
-    <% @games.each do |game| %>
 
-    <li><%= game.name %></li>
-    <%= image_tag game.boardimage.variant( resize: "100x100", colorspace: 'Gray' ).processed %>
-
-    <% end %>
-</ul>
+    <tbody>
+        <% @games.each do |game| %>
+            <tr>
+                <td><%= game.name %></td>
+                <td><%= image_tag game.boardimage.variant( resize: "100x100", colorspace: 'Gray' ).processed %></td>
+                <% if game.rule.present? %>
+                    <td><%= game.rule.description %></td>
+                <%end %>
+            </tr>
+        <% end %>
+    </tbody>
