--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -22,6 +22,11 @@
     <%= form.file_field :boardimage %>
 </div>
 
+<div class="field">
+    <%= form.label :game_pieces, "Add a photo of the game's pieces"%>
+    <%= form.file_field :game_pieces %>
+</div>
+
 
 <%= form.submit %>
 <%end %>
